--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
+    "start": "webpack",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "build": "NODE_ENV=production webpack --config webpack.prod.js"
   },
