--- a/webpack.config.js_backup/package.json
+++ b/webpack.config.js_backup/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --open",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "NODE_ENV=production webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +19,6 @@
     "autoprefixer": "^10.0.0",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
-    "file-loader": "^6.1.0",
-    "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "postcss": "^8.0.3",
