--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cssnano": "^4.1.10",
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.0",
+    "html-webpack-partials-plugin": "^0.7.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
@@ -36,6 +37,7 @@
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
