--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "autoprefixer": "^10.0.0",
+    "html-webpack-partials-plugin": "^0.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
@@ -36,6 +37,7 @@
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
